# libxbgp

./: .gitmodules  CMakeLists.txt  Make_dev_zero_fd_extern_in_header.patch  Makefile  README.md  bgp_ipfix.h  bgp_ipfix_templates.h  bpf_plugin.c  bpf_plugin.h  context_function.c  context_function.h  csnt_monitor.h  decision_process_manager.c  dict.c  dict.h  dynamic_injection.c  ebpf_injecter.c  event.c  event.h  evt_plugins.c  evt_plugins.h  hashmap.c  hashmap.h  insertion_point.c  insertion_point.h  ipfix_collector.c  ipfix_collector.h  jhash.h  list.c  list.h  log.c  log.h  main_ipfix_collector.c  main_ipfix_exporter.c  map.c  memory_manager.c  memory_manager.h  monitor_manager.c  monitor_manager.h  monitoring_server.c  (+34 more)
backup_code/: bgp_ipfix.c  bgp_ipfix.h  bgp_ipfix_templates.h  dynamic_injection.h  hashmap.c  hashmap_tests.c  hashmap_tests.h  ipfix_collector.c  ipfix_collector.h  ipfix_monit.c  list.c  list.h  list_test.c  main_ipfix_collector.c  main_ipfix_exporter.c  monitoring_server.c  monitoring_server.h  monitoring_struct.h
docs/source/: conf.py  dynamic_pluglet_insertion.rst  helper_functions.rst  index.rst  init_plugin_manager.rst  install.rst  mempool.rst  plugin_memory.rst  pluginizing_function.rst  rfc_implementing.rst  vm_internals.rst  writing_pluglets.rst
include/: bytecode_public.h  context_hdr.h  decision_process_manager.h  ebpf_mod_struct.h  global_info_str.h  monitoring_struct.h  plugin_arguments.h  plugins_id.h  prefix.h  public.h  public_bpf.h  tools_ubpf_api.h  ubpf_mempool_hdr.h  ubpf_prefix.h  ubpf_public.h
misc/: Dockerfile  Dockerfile.xfrr.alpine  Dockerfile_xbgp  boxplot.py  docker-compose.yml  exa_mini.conf  exabgp.exabgp  exabgp.mako  exabgp_trace.py  execution_time.py  fib_entries.py  filter_comp.py  graph_objdump.py  launcher.py  objdump_analyser.py  recv_ipc.c  test_ffi_closure.c  xproto
misc/exabgp_simu/: EoR_delta.py  analyse_pcap.py  announce_routes.py  bridge_setup.sh  build_simu.py  cust_prov_generator.py  exa_conf.conf.mako  generate_routes.py  get_invalid_prefixes.py  mrt2bgpdump.py  mrt2exabgp.py  routing_table_from_parsed_traces.py  serve_rpki_roa_json.py  simu_launcher.py  test_router_manager.py  time_per_prefixes.py  valid_rpki_generator.py
misc/experiments/: analyse_pcap_trace.py  config_generator.py  daemons.py  example_config_generator.py  extra_conf.py  global_utils.py  launcher.py  perfs_verifier.py  plot_perfs_exectime.py  plugin_conf.py  post_script.py  seahorn_exp.py
misc/experiments/configs/: bgpd.conf.mako  bird.conf.mako  exabgp.conf.env.mako  exabgp.conf.mako  zebra.conf.mako
misc/experiments/data/: cbmc_exec_time.csv  mrt2json.py
misc/experiments/scenario/: __init__.py  geo_tlv_scenario.py  igp_scenario.py  native_scenario.py  rpki_scenario.py  rr_scenario.py  scenario_utils.py  vrf_scenario.py
misc/insts_counter/: Makefile  count_wrapper.py  ebpf_insts_counter.c
misc/network_simu/: build_topo.py  example_topo.json  ipmininet_simu.py
misc/ns_simu/: bgpd_ns.conf  bridge_setup.sh  exabgp.env.mako  exabgp.exabgp  exabgp_conf.json  generate_exabgp_conf.py  launch_bgp.sh  mrt2exabgp.py  provision_vm.sh
plugins/: .gitignore  Makefile  bgp_inbound_filter_monit.c  bgp_keepalive_monit.c  decision_process_begin.c  decision_process_end.c  list_plugins.json  list_plugins_ospf.json  open_bgp_begin.c  open_bgp_end.c  simple_test.c  update_routine_monit.c  update_time_bgp_begin.c  update_time_bgp_end.c  withdraw_routine_monit.c
plugins/decision_steps/: bgp_step01_weight_check.c  bgp_step02_local_pref.c  bgp_step03_local_route.c  bgp_step04_as_path.c  bgp_step05_origin_check.c  bgp_step06_med_check.c  bgp_step07_peer_type.c  bgp_step10_confed_check.c  bgp_step11_igp_all.c  bgp_step12_prefer_first_path.c  bgp_step13_router_id_cmp.c  bgp_step14_cluster_id_cmp.c  bgp_step15_neighbor_addr_cmp.c  bgp_step_extra_bgp_communities.c
plugins/filters/: bgp_filter_as_path.c  filter_2_test.c  filter_3.c  filter_max_routes.c  filter_test.c
plugins/ospf/: Makefile  hello_count.c  ism_change_state.c  lsa_flood.c  manifesto_example.txt  originate_my_lsa.c  ospf_spf_next.c  plugins.h  rcv_packet.c  send_packet.c  spf_time.c  spf_time_post.c  test_plugin.c
plugins/proof/: Dockerfile  make_proof.py  mini_parser.py  to_check.json
plugins/zebra/: on_announce.c  on_withdraw.c
tests/: exporter_example.py  extra_info.json  extra_info_big.c  extra_info_big.h  extra_info_test.c  extra_info_test.h  ffi_closure_tests.c  ffi_closure_tests.h  hashmap_tests.c  hashmap_tests.h  internal_tests.c  internal_tests.h  job_plugins_tests.c  job_plugins_tests.h  list_test.c  list_test.h  main_tests.c  mempool_tests.c  mempool_tests.h  monitoring_tests.c  monitoring_tests.h  next_replace_tests.c  next_replace_tests.h  permissions_test.c  permissions_test.h  runtime_memcheck_test.c  runtime_memcheck_test.h  socket_tests.h  sockets_tests.c  sockets_tests.h  test_rust_plugins.c  test_rust_plugins.h  tree_test.c  tree_test.h  ubpf_manager_test.c  ubpf_manager_test.h  utils_tests.h
tests/microbenchmarks/: check_ret_vals.c  check_ret_vals.h  defs_type.h  dumb_function_exec.c  dumb_function_exec.h  microbench_main.c  parse_results.py  utils.h
tests/microbenchmarks/plugins/: 1000000_insts.c  100000_insts.c  10000_insts.c  1000_insts.c  1000_insts_1api.c  1000_insts_2api.c  1000_insts_3api.c  1000_insts_getset.c  1000_insts_malloc.c  100_insts.c  10_insts.c  Makefile  dumb_functions.h  no_insts.c
tests/plugins/: Makefile  add_two_insert.json  exporter_example.py  full_plugin.json  macro_void_test.c  macro_void_test_post.c  meta_manifest.conf  multiple_type_record.c  plugins.json  post_fun_macro.c  post_simple.c  pre_simple_ten.c  pre_simple_zero.c  replace_fun_macro.c  replace_part_1.c  replace_part_2.c  replace_simple.c  send_a_lot_of_record.c  send_monitoring_data.c  simple_tcp_connection.c  simple_test_api.c
tests/plugins/job_plugins/: job1_test.c  job2_test.c  job3_test.c  job41_test.c  job42_test.c  job_manifest.json  meta_manifest.conf
tests/plugins/memcheck_runtime/: invalid_rw.c  invalid_rw_1.json  invalid_rw_2.json  meta_manifest.conf  (+2 more)
(+17 files in other folders)
